--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/redux-persist": "^4.3.1"
   }
 }
