--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tremor/react": "^3.13.1",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
